force-app/main/default/objects/Opportunity/fields/BP_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>BP_Invoice_Status__c</fullName>
    <label>BP Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Items Received</fullName>
                <default>true</default>
                <label>Items Received</label>
            </value>
            <value>
                <fullName>BP Invoice Raised</fullName>
            </value>
            <value>
                <fullName>BP Invoice Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>