force-app/main/default/objects/Opportunity/fields/BP_Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>BP_Invoice_Total__c</fullName>
    <formula>Total_Expenses__c + Insurance__c +  Procurement_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BP Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>