force-app/main/default/objects/Opportunity/fields/BP_Number__c.field-meta.xml
<CustomField>
    <fullName>BP_Number__c</fullName>
    <label>BP Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>