force-app/main/default/objects/Opportunity/fields/BP_Order_No__c.field-meta.xml
<CustomField>
    <fullName>BP_Order_No__c</fullName>
    <label>BP Order No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>