force-app/main/default/objects/Opportunity/fields/Broker_confidence__c.field-meta.xml
<CustomField>
    <fullName>Broker_confidence__c</fullName>
    <description>1 is low and 5 is high</description>
    <inlineHelpText>1 = low
5 = high</inlineHelpText>
    <label>Broker confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>