force-app/main/default/objects/Opportunity/fields/Count_of_Enquiries__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Enquiries__c</fullName>
    <label>Count of Enquiries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>