force-app/main/default/objects/Opportunity/fields/Data_Population_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Population_Score__c</fullName>
    <formula>IF
(ISNULL(  CloseDate ) = TRUE, 0, 25)
+
IF
(Opportunity_Amount__c &lt;1 ,0, 25)
+
IF
(ISBLANK(TEXT(    Opportunity_Currency__c )) = TRUE, 0, 25)
+
IF
(ISBLANK(TEXT(    Broker_confidence__c )) = TRUE, 0, 25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Population Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>