force-app/main/default/objects/Opportunity/fields/Expense_Outbound_Freight__c.field-meta.xml
<CustomField>
    <fullName>Expense_Outbound_Freight__c</fullName>
    <label>Expense Outbound/Freight</label>
    <summarizedField>Quote.Expense_Outbound_Freight__c</summarizedField>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>