force-app/main/default/objects/Opportunity/fields/Expenses_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Inbound__c</fullName>
    <label>Expenses Inbound</label>
    <summarizedField>Quote.Expenses_Inbound__c</summarizedField>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>