force-app/main/default/objects/Opportunity/fields/Fee_less_INS__c.field-meta.xml
<CustomField>
    <fullName>Fee_less_INS__c</fullName>
    <label>Fee less INS</label>
    <summarizedField>Quote.Fee_less_INS__c</summarizedField>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>