force-app/main/default/objects/Opportunity/fields/Market_Position__c.field-meta.xml
<CustomField>
    <fullName>Market_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Position</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Market_Position__c.Status_Reason__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Market_Position__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>