force-app/main/default/objects/Opportunity/fields/NDA_Deal__c.field-meta.xml
<CustomField>
    <fullName>NDA_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA opportunity</label>
    <type>Checkbox</type>
</CustomField>