force-app/main/default/objects/Opportunity/fields/NDA_Deal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>NDA_Deal_End_Date__c</fullName>
    <label>NDA opportunity end date</label>
    <type>Date</type>
</CustomField>