force-app/main/default/objects/Opportunity/fields/Nigel_Name__c.field-meta.xml
<CustomField>
    <fullName>Nigel_Name__c</fullName>
    <label>Nigel Name</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>