force-app/main/default/objects/Opportunity/fields/Nigel_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Nigel_Opportunity_Number__c</fullName>
    <description>Storing the nigel opportunity number from dynamics to support syncing, website working reporting. This will populate via the sync</description>
    <label>Nigel Opportunity Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>