force-app/main/default/objects/Opportunity/fields/Offer_Approved__c.field-meta.xml
<CustomField>
    <fullName>Offer_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Approved</label>
    <type>Checkbox</type>
</CustomField>