force-app/main/default/objects/Opportunity/fields/Opportunity_Age__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Age__c</fullName>
    <formula>IF(
IsClosed = TRUE,

   DATE(YEAR(CloseDate),MONTH(CloseDate),DAY(CloseDate)) - DATE(YEAR(DATEVALUE(CreatedDate)),MONTH(DATEVALUE(CreatedDate)),DAY(DATEVALUE(CreatedDate))),

today() - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>