force-app/main/default/objects/Opportunity/fields/Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount__c</fullName>
    <label>Opportunity Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>