force-app/main/default/objects/Opportunity/fields/Opportunity_Currency__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Currency__c</fullName>
    <label>Opportunity Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>