force-app/main/default/objects/Opportunity/fields/Opportunity_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source_Detail__c</fullName>
    <label>Opportunity Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>