force-app/main/default/objects/Opportunity/fields/Outstanding_offers__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_offers__c</fullName>
    <description>updated via flow . shows the outstanding offers eg offers not rejected or accepted</description>
    <label>Outstanding offers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>