force-app/main/default/objects/Opportunity/fields/Outstanding_sea_trials__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_sea_trials__c</fullName>
    <description>from a flow count of outstanding sea trials</description>
    <label>Outstanding sea trials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>