force-app/main/default/objects/Opportunity/fields/Outstanding_visits__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_visits__c</fullName>
    <description>populated via flow - count of outstanding visits</description>
    <label>Outstanding visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>