force-app/main/default/objects/Opportunity/fields/Procurement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Amount__c</fullName>
    <inlineHelpText>Total Sales Price</inlineHelpText>
    <label>Procurement Amount</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>