force-app/main/default/objects/Opportunity/fields/ProcurementYacht__c.field-meta.xml
<CustomField>
    <fullName>ProcurementYacht__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yacht</label>
    <referenceTo>Yacht__c</referenceTo>
    <relationshipLabel>Procurement Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>