force-app/main/default/objects/Opportunity/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Procurement - The date the quote was requested</description>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>