force-app/main/default/objects/Opportunity/fields/Sensitive_Deal__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitive opportunity</label>
    <type>Checkbox</type>
</CustomField>