force-app/main/default/objects/Opportunity/fields/Sensitive_Deal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Deal_End_Date__c</fullName>
    <label>Sensitive opportunity end date</label>
    <type>Date</type>
</CustomField>