force-app/main/default/objects/Opportunity/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source</valueSetName>
    </valueSet>
</CustomField>