force-app/main/default/objects/Opportunity/fields/SysIsProcuerment__c.field-meta.xml
<CustomField>
    <fullName>SysIsProcuerment__c</fullName>
    <formula>IF(RecordType.DeveloperName=&apos;Procurement_RFQ&apos;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SysIsProcuerment</label>
    <type>Checkbox</type>
</CustomField>