force-app/main/default/objects/Opportunity/fields/Tab_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Tab_Visibility__c</fullName>
    <label>Tab Visibility</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>