force-app/main/default/objects/Opportunity/fields/Yacht__c.field-meta.xml
<CustomField>
    <fullName>Yacht__c</fullName>
    <formula>IF(
NOT(ISBLANK( Market_Position__r.Yacht__r.Name)),
HYPERLINK(&apos;/&apos; &amp;  Market_Position__r.Yacht__c , Market_Position__r.Yacht__r.Name , &apos;_blank&apos;),
&apos;&apos;
)</formula>
    <label>Yacht</label>
    <type>Text</type>
</CustomField>