force-app/main/default/objects/Opportunity/fields/Yacht_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Yacht_Ref_No__c</fullName>
    <formula>ProcurementYacht__r.Yacht_ref_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yacht Ref No</label>
    <type>Text</type>
</CustomField>