force-app/main/default/objects/Opportunity/recordTypes/Broker_Purchase.recordType-meta.xml
<RecordType>
    <fullName>Broker_Purchase</fullName>
    <active>true</active>
    <businessProcess>Broker Purchase</businessProcess>
    <label>Broker Purchase</label>
</RecordType>