force-app/main/default/objects/Opportunity/recordTypes/Broker_Sale.recordType-meta.xml
<RecordType>
    <fullName>Broker_Sale</fullName>
    <active>true</active>
    <businessProcess>Broker Sale</businessProcess>
    <label>Broker Sale</label>
</RecordType>