force-app/main/default/objects/Opportunity/recordTypes/Procurement_RFQ.recordType-meta.xml
<RecordType>
    <fullName>Procurement_RFQ</fullName>
    <active>true</active>
    <businessProcess>Procurement RFQ</businessProcess>
    <label>Procurement RFQ</label>
</RecordType>