force-app/main/default/objects/Opportunity/listViews/Procurement_RFQs.listView-meta.xml
<ListView>
    <fullName>Procurement_RFQs</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>ProcurementYacht__c</columns>
    <columns>Procurement_Amount__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Procurement_RFQ</value>
    </filters>
    <label>Procurement RFQs</label>
</ListView>